force-app/main/default/objects/Diagnostico__c/Diagnostico__c.object-meta.xml
<CustomObject>
    <label>Diagnóstico</label>
    <nameField>
        <label>Nombre del Diagnóstico</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Diagnósticos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>