force-app/main/default/objects/Diagnostico__c/fields/Codigo_del_Diagnostico__c.field-meta.xml
<CustomField>
    <fullName>Codigo_del_Diagnostico__c</fullName>
    <externalId>true</externalId>
    <label>Código del Diagnóstico</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>