force-app/main/default/objects/Diagnostico__c/fields/Descripci_n_Diagnostico__c.field-meta.xml
<CustomField>
    <fullName>Descripci_n_Diagnostico__c</fullName>
    <label>Descripción Diagnostico</label>
    <length>255</length>
    <type>Text</type>
</CustomField>