force-app/main/default/objects/Diagnostico__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Codigo_del_Diagnostico__c</columns>
    <columns>Descripci_n_Diagnostico__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>